vertical align section for safari fix/bug

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -163,6 +163,7 @@ section {
 	width: 250px;
 	height: 340px;
 	display: inline-block;
+	vertical-align: top;
 	overflow: hidden;
 	transition: 1s;
 	padding: 0 15px 15px 15px;
